--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
        // window.$ = window.jQuery = require('./app/assets/js/jquery.min.js');
         window.fs = require('fs');
         window.path = require('path');
+        var directory = __dirname + /images/;
+        fs.stat(directory, function(err, stats) {
+          //Check if error defined and the error code is "not exists"
+          if (err && err.errno === 34) {
+            //Create the directory, call the callback.
+            fs.mkdir(directory);
+          }
+        });
     }
 </script>
   <script src="dist/vendor/bootstrap.min.js"></script>
