--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
        // window.$ = window.jQuery = require('./app/assets/js/jquery.min.js');
         window.fs = require('fs');
         window.path = require('path');
-        var directory = __dirname + /images/;
+
+        var directory = window.path.resolve().replace(/\\/g,'/') + '/images';;
         fs.stat(directory, function(err, stats) {
           //Check if error defined and the error code is "not exists"
-          if (err && err.errno === 34) {
+          if (err) {
             //Create the directory, call the callback.
             fs.mkdir(directory);
           }
